parser.output
Terminals unused in grammar

    DIGIT


Grammar

    0 $accept: program $end

    1 program: functions

    2 functions: function functions
    3          | ε

    4 function: FUNC IDENT RPRAN LPRAN RCURL LCURL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    FUNC (258) 4
    RPRAN (259) 4
    LPRAN (260) 4
    RCURL (261) 4
    LCURL (262) 4
    DIGIT <op_value> (263)
    IDENT <op_value> (264) 4


Nonterminals, with rules where they appear

    $accept (10)
        on left: 0
    program (11)
        on left: 1
        on right: 0
    functions (12)
        on left: 2 3
        on right: 1 2
    function (13)
        on left: 4
        on right: 2


State 0

    0 $accept: • program $end

    FUNC  shift, and go to state 1

    $default  reduce using rule 3 (functions)

    program    go to state 2
    functions  go to state 3
    function   go to state 4


State 1

    4 function: FUNC • IDENT RPRAN LPRAN RCURL LCURL

    IDENT  shift, and go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: functions •

    $default  reduce using rule 1 (program)


State 4

    2 functions: function • functions

    FUNC  shift, and go to state 1

    $default  reduce using rule 3 (functions)

    functions  go to state 7
    function   go to state 4


State 5

    4 function: FUNC IDENT • RPRAN LPRAN RCURL LCURL

    RPRAN  shift, and go to state 8


State 6

    0 $accept: program $end •

    $default  accept


State 7

    2 functions: function functions •

    $default  reduce using rule 2 (functions)


State 8

    4 function: FUNC IDENT RPRAN • LPRAN RCURL LCURL

    LPRAN  shift, and go to state 9


State 9

    4 function: FUNC IDENT RPRAN LPRAN • RCURL LCURL

    RCURL  shift, and go to state 10


State 10

    4 function: FUNC IDENT RPRAN LPRAN RCURL • LCURL

    LCURL  shift, and go to state 11


State 11

    4 function: FUNC IDENT RPRAN LPRAN RCURL LCURL •

    $default  reduce using rule 4 (function)
